Header and nav-bar

--- a/frontend/affiche/src/layouts/header/header.css
+++ b/frontend/affiche/src/layouts/header/header.css
@@ -1,7 +1,13 @@
 .Header {
-    background-color: aquamarine;
     height: 90px;
     display: flex;
     align-items: center;
     justify-content: space-between;
+    border-image: linear-gradient(270deg, #FFFFFF 0%, #F88044 50%, #FFFFFF 100%) 1;
+    border-bottom: 1px solid;
+}
+
+.nav-item {
+    display: flex;
+    justify-content: center;
 }
