--- a/frontend/affiche/src/layouts/header/components/search-bar/search-bar.css
+++ b/frontend/affiche/src/layouts/header/components/search-bar/search-bar.css
@@ -1,3 +1,19 @@
-.SearchBar {
-    background-color: rgb(128, 255, 195);
+.searchbar-input {
+    background-image: url('../../../../../public/assets/icons/search.svg');
+    background-position: 5px;
+    background-repeat: no-repeat;
+    text-indent: 30px;
+    width: 300px;
+    border-style: solid;
+    border-radius: 10px;
+    border-width: 1px;
+    border-color: #888888;
+    background-color: #fafafa;
+    outline: none;
+    caret-color: rgb(10, 122, 255);
+    padding: 5px;
+    color: #000;
+    font-weight: 400;
 }
+
+.searchbar::placeholder { color: #888888; }
