--- a/frontend/affiche/src/layouts/navbar/components/navbar-item/navbar-item.css
+++ b/frontend/affiche/src/layouts/navbar/components/navbar-item/navbar-item.css
@@ -1,7 +1,39 @@
 .NavbarItem {
-    background-color: rgb(237, 179, 62);
-
-    /* margin: 0 5px 0 5px; */
+    margin: 0 5px 0 5px;
     /* это если мы будем выравнивать их через justify-content: center */
+}
+
+.nav-block:hover {background: #FC9E6C; border-color: #FC9E6C;}
+
+.nav-block {
+    background: #E88652;
+    color: #fff;
+    height: 35px;
+    border-radius: 10px;
+    border-style: solid;
+
+
+    display: flex;
+}
+
+.nav-link {
+    text-decoration: none;
+    color: #fff;
+    display: flex;
+    justify-items: center;
     
+    padding-left: 16px;
+    padding-right: 16px;
+}
+
+.nav-content-title {
+    padding-top: 10px;
+    padding-left: 5px;
+    font-weight: 400px;
+}
+
+.nav-item-icon {
+    margin-top: 5px;
+    width: 24px;
+    height: 24px;
 }
