--- a/frontend/affiche/src/layouts/navbar/navbar.css
+++ b/frontend/affiche/src/layouts/navbar/navbar.css
@@ -1,7 +1,7 @@
 .Navbar {
-    background-color: rgb(228, 228, 171);
     height: 35px;
     display: flex;
     align-items: center;
     justify-content: space-between;
+    margin-top: 36px;
 }
