added footer, changed side paddings of the app

--- a/frontend/affiche/src/сomponents/common/event-card/event-card.css
+++ b/frontend/affiche/src/сomponents/common/event-card/event-card.css
@@ -5,7 +5,7 @@
     height: 317px;
     display: flex;
     flex-direction: column;
-    margin: 5px;
+    margin: 20px 5px 20px 5px;
 }
 
 .EventPrice {
