--- a/frontend/affiche/src/styles/app.css
+++ b/frontend/affiche/src/styles/app.css
@@ -1,6 +1,13 @@
 .App {
-  min-width: 100%;
+  position: relative;
+  width: 100vw;
   min-height: 100vh;
-  background-color: #EBEBEB;
+  
+  padding: 0 125px;
+  box-sizing: border-box;
+
+  display: flex;
+  flex-direction: column;
+
 }
 
