--- a/frontend/affiche/src/styles/index.css
+++ b/frontend/affiche/src/styles/index.css
@@ -7,7 +7,9 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  font-family: "Open Sans", sans-serif
+  font-family: "Open Sans", sans-serif;
+  background-color: #EBEBEB;
+  overflow-x: hidden;
 }
 
 code {
