--- a/frontend/affiche/src/views/auth/components/auth-form/auth-form.css
+++ b/frontend/affiche/src/views/auth/components/auth-form/auth-form.css
@@ -1,5 +1,5 @@
 .AuthForm {
-    width: 577px;
+    width: 550px;
     background-color: white;
     padding: 45px 26px;
     position: relative;
@@ -40,7 +40,7 @@
     text-transform: none;
 }
 
-.PasswordRecovery {
+.SmallCenteredNote {
     text-align: center;
     font-size: 14px;
     color: #666666;
@@ -74,3 +74,39 @@
 .DividerText::after {
     margin-left: 30px; 
 }
+
+.NoTopMargin {
+    margin-top: 0;
+}
+
+.Notifier {
+    background-color: #F2FEE2;
+    border: none;
+    border-radius: 10px;
+    padding: 15px 10px;
+    color: #666666;
+    display: flex;
+    flex-direction: row;
+    gap: 20px;
+}
+
+.WarnImage {
+    margin: 20px;
+}
+
+.NotifierMessage {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+}
+
+.NotifierText {
+    font-size: 16px;
+    line-height: 22px;
+}
+
+.PhoneNumber {
+    font-size: 20px;
+    line-height: 28px;
+}
+
