--- a/frontend/affiche/src/components/common/big-button/big-button.css
+++ b/frontend/affiche/src/components/common/big-button/big-button.css
@@ -1,6 +1,5 @@
 .big-button {
     padding: 12px 16px;
-    background: #e88652;
     border-radius: 10px;
     color: #fff;
     font-weight: 700;
@@ -11,5 +10,5 @@
     justify-content: center;
     align-items: center;
     gap: 5px;
+    cursor: pointer;
 }
-.big-button:hover {background: rgb(252, 158, 108);}
