--- a/frontend/affiche/src/components/common/text-input/text-input.css
+++ b/frontend/affiche/src/components/common/text-input/text-input.css
@@ -20,13 +20,15 @@
 }
 
 .InputLine {
-    width: 100%;
+    width: calc(100% - 40px);
     margin-top: 10px;
     border: 1px solid rgba(102, 102, 102, 0.35);
     border-radius: 12px;
     font-size: 20px;
     line-height: 40px;
     outline: none;
+    padding-left: 20px;
+    padding-right: 20px;
 }
 
 .HideIcon {
